--- a/style.css
+++ b/style.css
@@ -135,9 +135,58 @@ height: 35px;
      }
     }
 
+    @media (max-width: 1893px) {
+    .main {
+    background-size: 56%
+     }
+
+    .main__title {
+    font: bold 61px/83px pt_serifbold, arial, helvetica, sans-serif;
+     }
+    }
+
+    @media (max-width: 1808px) {
+    .main {
+    padding: 80px 61% 25%;
+    background-size: 56%;
+     }
+
+    .main__title {
+    font: bold 58px/83px pt_serifbold, arial, helvetica, sans-serif;
+     }
+    }
+
     @media (max-width: 1654px) {
     .main {
     padding: 5% 61% 5% 0;
+     }
+    }
+
+    @media (max-width: 1550px) {
+    .main {
+    padding: 5% 61% 25%;
+    background-size: 60%;
+     }
+
+    .main__title {
+    font: bold 56px/75px pt_serifbold, arial, helvetica, sans-serif;
+      }
+
+    .main__title-text_highlight{
+    line-height: 75px;
+      }
+     }
+
+    @media (max-width: 1505px) {
+    .wrapper{
+    margin: auto;
+    width: 90%;
+     }
+
+    .main {
+    padding: 5% 61% 30%;
+    background-size: 60%;
+    background: 90% top/57% no-repeat url(img/mainimg.svg)
      }
     }
 
@@ -147,10 +196,17 @@ height: 35px;
      }
     }
 
+    @media (max-width: 1401px) {
+    .main {
+    background-size: 58%;
+    background: 100% top/50% no-repeat url(img/mainimg.svg);
+     }
+    }
+
     @media (max-width: 1376px) {
     .wrapper {
     margin: auto;
-    width: 68%;
+    width: 75%;
        }
 
     .header {
@@ -158,19 +214,30 @@ height: 35px;
       }
 
     .main{
-    background-size: 56%;
+    background-size: 68%;
+    background-position: top right;
        }
 
      .main__title{
-     font: bold 58px/83px pt_serifbold, arial, helvetica, sans-serif
+     font: bold 50px/59px pt_serifbold, arial, helvetica, sans-serif
        }
+
+     .main__title-text_highlight{
+     line-height: 59px;
+         }
+
+     .main__subtitle{
+     font: 18px/26px robotoregular, arial, helvetica, sans-serif;
+     width: 350px;
+     }
 
      .hamburger-menu{
      display: none;
        }
 
      .points {
-     padding-left: 32%;
+     padding-left: 36%;
+     top: 68%;
       }
      }
 
@@ -245,33 +312,65 @@ height: 35px;
     }
      }
 
+  @media (max-width: 1359px) {
+    .wrapper{
+    margin: auto;
+    width: 70%;
+     }
+  }
+
   @media (max-width: 1354px) {
   .points {
-  top: 90%;
+  top: 68%;
   margin-left: 1%;
    }
   }
 
   @media (max-width: 1328px) {
-    .wrapper{
+    .wrapper {
     margin: auto;
-    width: 90%;
+    width: 80%;
      }
 
-    .points {
-    margin-left: 10%;
+    .main {
+    background-size: 51%;
+    background-position: 87%;
     }
-  }
 
-  @media (max-width: 1240px) {
+    .points {
+    margin-left: 4%;
+    top: 68%;
+    }
+   }
+
+   @media (max-width: 1280px) {
+    .points {
+    margin-left: 2%;
+    top: 72%;
+    }
+   }
+
+   @media (max-width: 1240px) {
     .points {
     margin-left: 8%;
     }
   }
 
+  @media (max-width: 1234px) {
+   .points {
+   margin-left: 0%;
+   }
+ }
+
   @media (max-width: 1200px) {
     .points {
     margin-left: 7%;
+    }
+  }
+
+  @media (max-width: 1179px) {
+    .points {
+    margin-left: 0%;
     }
   }
 
@@ -281,17 +380,33 @@ height: 35px;
     }
   }
 
+  @media (max-width: 1121px) {
+    .points {
+    margin-left: 33%;
+    }
+  }
+
   @media (max-width: 1100px) {
     .points {
     margin-left: 2%;
     }
   }
 
+  @media (max-width: 1044px) {
+    .main {
+    background-position: 100%;
+    }
+  }
+
   @media (max-width: 1036px){
-    .wrapper{
+    .wrapper {
     margin: auto;
     width: 90%;
      }
+
+    .points {
+    margin-left: 10%;
+    }
   }
 
   @media (max-width: 1024px){
