--- a/style.css
+++ b/style.css
@@ -343,6 +343,12 @@ height: 35px;
     }
    }
 
+   @media (max-width: 1315px) {
+    .menu__item {
+    right: 32%;
+    }
+   }
+
    @media (max-width: 1280px) {
     .points {
     margin-left: 2%;
