--- a/style.css
+++ b/style.css
@@ -409,6 +409,7 @@ height: 35px;
   @media (max-width: 1188px) {
    .main__title{
    font: bold 45px/56px pt_serifbold, arial, helvetica, sans-serif;
+   word-break: keep-all;
     }
 
    .main__title-text_highlight {
