--- a/style.css
+++ b/style.css
@@ -471,7 +471,7 @@ height: 35px;
      }
 
     .points {
-    margin-left: 10%;
+    padding-left: 41%;
     }
   }
 
@@ -593,7 +593,7 @@ height: 35px;
 
   @media (max-width: 804px) {
   .points{
-  top: 80%;
+  top: 68%;
   padding-left: 42%
    }
   }
