--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .logo {
   position: relative;
   color:black;
-  padding: 40px 0 0 48px;
+  padding: 40px 0 40px 48px;
   font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
   width: 190px;
   height: 35px;
