--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body {
 }
 
 .points {
-  display: flex;
+  position: absolute;
   font: 40px/45px pt_serifbold, arial, helvetica, sans-serif;
   top: 962px;
   padding-left: 39%;
@@ -247,10 +247,6 @@ body {
       padding: 5% 1% 30%;
       background-size: 60%;
       background: 90% top/57% no-repeat url(img/mainimg.svg)
-  }
-
-  .points {
-      padding-left: 45%;
   }
 
 }
