--- a/style.css
+++ b/style.css
@@ -621,7 +621,7 @@ body {
       padding: 80px 0;
       list-style: none;
       text-align: center;
-      background-color: #ECEFF1;
+      background-color: #fff;
       box-shadow: 50px 10px 1px rgba(0, 0, 0, .9);
   }
 
