--- a/style.css
+++ b/style.css
@@ -80,16 +80,17 @@ body {
   margin-right: -9px;
 }
 
-  @keyframes slidein {
+  @keyframes slidein{
     from {
       margin-left: 100%;
       width: 300%;
-    }
+  }
 
     to {
       margin-left: 0%;
       width: 100%;
-    }
+  }
+
 }
 
 .main {
@@ -97,19 +98,19 @@ body {
   background: 99% top/50% no-repeat url(img/mainimg.svg);
 }
 
-.main__title{
+.main__title {
   margin: 0 5px 31px 0;
   font: bold 66px/83px pt_serifbold, arial, helvetica, sans-serif;
   color: black;
 }
 
-.main__title-text_highlight{
+.main__title-text_highlight {
   line-height: 88px;
   background-color: #ECF3FF;
   background: linear-gradient(to top, #ecf3ff 0%, #ecf3ff 60%, #fff 82% 100%);
 }
 
-.main__subtitle{
+.main__subtitle {
   margin-bottom: 40px;
   font: 22px/26px robotoregular, arial, helvetica, sans-serif;
   width: 440px;
@@ -144,23 +145,22 @@ body {
 @media (min-width: 1965px) {
 
   .main {
-      padding: 80px 61% 20% 0px;
+    padding: 80px 61% 20% 0px;
   }
 
   .menu__item  {
-      right: 38%;
+    right: 38%;
   }
 
-  .points {
-      top: 90%;
+  .points  {
+    top: 90%;
   }
-
 }
 
 @media (max-width: 1900px) {
 
   .points {
-      top: 90%;
+    top: 90%;
   }
 
 }
@@ -169,12 +169,12 @@ body {
 @media (max-width: 1893px) {
 
   .main {
-      background-size: 56%;
-      padding: 80px 61% 20% 0;
+    background-size: 56%;
+    padding: 80px 61% 20% 0;
   }
 
   .main__title  {
-      font: bold 61px/83px pt_serifbold, arial, helvetica, sans-serif;
+    font: bold 61px/83px pt_serifbold, arial, helvetica, sans-serif;
   }
 
 }
@@ -183,7 +183,7 @@ body {
 @media (max-width: 1808px) {
 
   .main__title {
-      font: bold 58px/83px pt_serifbold, arial, helvetica, sans-serif;
+    font: bold 58px/83px pt_serifbold, arial, helvetica, sans-serif;
   }
 
 }
@@ -191,7 +191,7 @@ body {
 @media (max-width: 1654px) {
 
   .main {
-      padding: 5% 61% 15% 0;
+    padding: 5% 61% 15% 0;
   }
 
 }
@@ -199,21 +199,21 @@ body {
 @media (max-width: 1550px) {
 
   .menu__item {
-      right: 0%;
+    right: 0%;
   }
 
   .main {
-      padding: 5% 1% 25%;
-      background-size: 60%;
+    padding: 5% 1% 25%;
+    background-size: 60%;
   }
 
   .main__title {
-      font: bold 56px/75px pt_serifbold, arial, helvetica, sans-serif;
-      width: 45%;
+    font: bold 56px/75px pt_serifbold, arial, helvetica, sans-serif;
+    width: 45%;
   }
 
   .main__title-text_highlight  {
-      line-height: 75px;
+    line-height: 75px;
   }
 
 }
@@ -221,17 +221,16 @@ body {
 @media (max-width: 1505px) {
 
   .wrapper{
-      width: 90%;
+    width: 90%;
   }
 
   .menu__item {
-      right: 19%;
+    right:   19%;
   }
 
   .main {
-      padding: 5% 1% 30%;
-      background-size: 60%;
-      background: 90% top/57% no-repeat url(img/mainimg.svg);
+    padding: 5% 1% 30%;
+    background: 90% top/57% no-repeat url(img/mainimg.svg);
   }
 
 }
@@ -239,7 +238,7 @@ body {
 @media (max-width: 1460px) {
 
   .main {
-      background-size: 55%;
+    background-size:    55%;
   }
 
 }
@@ -247,38 +246,38 @@ body {
 @media (max-width: 1376px) {
 
   .wrapper  {
-      width: 75%;
+    width: 75%;
   }
 
   .header  {
-      margin-bottom: 40px;
+    margin-bottom: 40px;
   }
 
   .main {
-      background-size: 55%;
-      background-position: top right;
+    background-size: 55%;
+    background-position:    top right;
   }
 
   .main__title {
-      font: bold  50px/59px  pt_serifbold,  arial, helvetica, sans-serif;
+    font: bold  50px/59px  pt_serifbold,  arial, helvetica, sans-serif;
   }
 
   .main__title-text_highlight {
-      line-height: 59px;
+    line-height: 59px;
   }
 
   .main__subtitle {
-      font: 18px/26px robotoregular, arial, helvetica, sans-serif;
-      width: 350px;
+    font: 18px/26px robotoregular, arial, helvetica, sans-serif;
+    width: 350px;
   }
 
   .hamburger-menu {
-      display: none;
+    display: none;
   }
 
   .points {
-      padding-left: 36%;
-      top: 68%;
+    padding-left: 36%;
+    top: 68%;
   }
 
 }
@@ -286,70 +285,70 @@ body {
 @media (max-width: 1368px) {
 
   .wrapper{
-      width: 68%;
+    width: 68%;
   }
 
   .header {
-      margin-bottom: 28px;
+    margin-bottom:    28px;
   }
 
   .main {
-      text-align: left;
-      padding: 7% 0 109px;
-      background-size: 514px;
-      background-position: 417px;
+    text-align: left;
+    padding: 7% 0 109px;
+    background-size: 514px;
+    background-position: 417px;
   }
 
   .main__title {
-      margin: 0px;
-      padding:7px 0 10px 0;
-      font: bold 50px/59px pt_serifbold, arial, helvetica, sans-serif;
-      width: 400px;
-      word-break: keep-all;
+    margin: 0px;
+    padding: 7px 0 10px 0;
+    font: bold 50px/59px pt_serifbold, arial, helvetica, sans-serif;
+    width:    400px;
+    word-break: keep-all;
   }
 
   .main__title-text_highlight {
-      line-height: 69px;
+    line-height: 69px;
   }
 
   .main__subtitle {
-      margin-bottom: 46px;
-      margin: 24px 0px 39px;
-      font: 18px/23px robotoregular, arial, helvetica, sans-serif;
-      color: black;
-      width: 350px;
-      word-break: keep-all;
+    margin-bottom: 46px;
+    margin: 24px 0px 39px;
+    font: 18px/23px robotoregular, arial, helvetica, sans-serif;
+    color: black;
+    width: 350px;
+    word-break: keep-all;
   }
 
   .main__button {
-      font: 14px/16px robotomedium, arial, helvetica, sans-serif;
-      padding: 13px 26px 12px 14px;
-      text-align: center;
+    font: 14px/16px robotomedium, arial, helvetica, sans-serif;
+    padding: 13px 26px 12px 14px;
+    text-align: center;
   }
 
   .menu {
-      display: flex;
-      align-items: center;
+    display:    flex;
+    align-items:    center;
   }
 
   .menu__item {
-      right: 14px;
-      position: relative;
-      margin: 4px 26px 0 0;
-      font: 500 14px/18px robotomedium, arial, helvetica, sans-serif;
-      color: #000;
-      text-decoration: none;
-      opacity: 1;
-      transition: opacity .5s;
+    right: 14px;
+    position: relative;
+    margin: 4px 26px 0 0;
+    font: 500 14px/18px robotomedium, arial, helvetica, sans-serif;
+    color:    #000;
+    text-decoration: none;
+    opacity: 1;
+    transition:    opacity .5s;
   }
 
   .menu__item_active::after {
-      height: 1px;
+    height: 1px;
   }
 
   .points{
-      top: 652px;
-      padding-left: 446px;
+    top: 652px;
+    padding-left: 446px;
   }
 
 }
@@ -357,17 +356,17 @@ body {
 @media (max-width: 1328px) {
 
   .wrapper {
-      width: 80%;
+    width: 80%;
   }
 
   .main {
-      background-size: 51%;
-      background-position: 87%;
+    background-size: 51%;
+    background-position: 87%;
   }
 
   .points {
-      margin-left: 4%;
-      top: 69%;
+    margin-left:     4%;
+    top: 69%;
   }
 
 }
@@ -375,7 +374,7 @@ body {
 @media (max-width: 1315px) {
 
   .menu__item {
-      right: 32%;
+    right: 32%;
   }
 
 }
@@ -383,29 +382,29 @@ body {
 @media (max-width: 1280px) {
 
  .points {
-      margin-left: 0%;
-      top: 69%;
-  }
+   margin-left: 0%;
+   top: 69%;
+ }
 
 }
 
 @media (max-width: 1200px) {
 
   .main {
-      background-position: 100%;
+    background-position: 100%;
   }
 
   .main__title{
-      font: bold 45px/56px pt_serifbold, arial, helvetica, sans-serif;
-      word-break: keep-all;
+    font: bold 45px/56px pt_serifbold, arial, helvetica, sans-serif;
+    word-break: keep-all;
   }
 
   .main__title-text_highlight {
-      line-height: 56px;
+    line-height:    56px;
   }
 
   .points {
-      margin-left: 1%;
+    margin-left: 1%;
   }
 
 }
@@ -413,11 +412,11 @@ body {
 @media (max-width: 1036px) {
 
   .wrapper {
-      width: 91%;
+    width: 91%;
   }
 
   .points {
-      padding-left: 41%;
+    padding-left: 41%;
   }
 
 }
@@ -425,71 +424,71 @@ body {
 @media (max-width: 1024px) {
 
   .header {
-      margin-bottom: 28px;
+    margin-bottom: 28px;
   }
 
   .logo  {
-      font: bold 23px/31px pt_serifbold, arial, helvetica, sans-serif;
+    font: bold 23px/31px pt_serifbold, arial, helvetica, sans-serif;
   }
 
   .main {
-      text-align: left;
-      padding: 7% 0 109px;
-      background-size: 511px;
-      background-position: 419px;
+    text-align: left;
+    padding: 7% 0 109px;
+    background-size: 511px;
+    background-position: 419px;
   }
 
   .main__title {
-      margin: 0px;
-      padding:7px 0 10px 0;
-      font: bold 50px/59px pt_serifbold, arial, helvetica, sans-serif;
-      width:400px;
-      word-break: keep-all;
+    margin: 0px;
+    padding:7px 0 10px 0;
+    font: bold 50px/59px pt_serifbold, arial, helvetica, sans-serif;
+    width:400px;
+    word-break: keep-all;
   }
 
   .main__title-text_highlight {
-      line-height: 69px;
+    line-height: 69px;
   }
 
   .main__subtitle {
-      margin: 21px 0 37px 0;
-      font: 18px/25px robotoregular, arial, helvetica, sans-serif;
-      color: black;
-      width: 350px;
-      word-break: keep-all;
+    margin: 21px 0 37px 0;
+    font: 18px/25px robotoregular, arial, helvetica, sans-serif;
+    color: black;
+    width: 350px;
+    word-break: keep-all;
   }
 
   .main__button {
-      font: 14px/19px robotomedium, arial, helvetica, sans-serif;
-      padding: 12px 25px 11px 13px;
-      text-align: center;
+    font: 14px/19px robotomedium, arial, helvetica, sans-serif;
+    padding: 12px 25px 11px 13px;
+    text-align: center;
   }
 
   .menu {
-      display: flex;
-      align-items: center;
+    display: flex;
+    align-items: center;
   }
 
   .menu__item {
-      right: 11px;
-      position: relative;
-      margin: 4px 26px 0 0;
-      font: 500 14px/18px robotomedium, arial, helvetica, sans-serif;
-      color: #000;
-      text-decoration: none;
-      opacity: 1;
-      transition: opacity .5s;
+    right: 11px;
+    position: relative;
+    margin: 4px 26px 0 0;
+    font: 500 14px/18px robotomedium, arial, helvetica, sans-serif;
+    color: #000;
+    text-decoration: none;
+    opacity: 1;
+    transition: opacity .5s;
   }
 
   .menu__item_active::after {
-      height: 1px;
+    height: 1px;
   }
 
   .points{
-      position: absolute;
-      top: 652px;
-      padding-left: 447px;
-      color: #C8DBFB;
+    position:    absolute;
+    top: 652px;
+    padding-left: 447px;
+    color: #c8dbfb;
   }
 
 }
@@ -497,26 +496,26 @@ body {
 @media (max-width: 1007px) {
 
   .main{
-      background-size: 55%;
-      background-position: 100%;
+    background-size: 55%;
+    background-position: 100%;
   }
 
   .main__title {
-      font: bold 31px/39px pt_serifbold, arial, helvetica, sans-serif;
-      width: 40%;
+    font: bold 31px/39px pt_serifbold, arial, helvetica, sans-serif;
+    width: 40%;
    }
 
   .main__title-text_highlight {
-      line-height: 39px;
+    line-height:    39px;
    }
 
    .main__subtitle {
-      font: 18px/20px robotoregular, arial, helvetica, sans-serif;
-      width: 40%;
+     font: 18px/20px robotoregular, arial, helvetica, sans-serif;
+     width: 40%;
    }
 
-  .points {
-      top: 69%;
+   .points {
+     top: 69%;
    }
 
 }
@@ -524,7 +523,7 @@ body {
 @media (max-width: 892px) {
 
   .points {
-      padding-left: 43%;
+    padding-left:    43%;
   }
 
 }
@@ -532,154 +531,155 @@ body {
 @media (max-width: 768px) {
 
   .logo {
-      font: bold 0px/0px pt_serifbold, arial, helvetica, sans-serif;
+    font: bold 0px/0px pt_serifbold, arial, helvetica, sans-serif;
   }
 
   .menu {
-      display: none;
+    display: none;
   }
 
   .hamburger-menu {
-      display: flex;
+    display: flex;
   }
 
   .header {
-      margin-bottom: 2%;
+    margin-bottom: 2%;
   }
 
   .main {
-      text-align: center;
-      padding: 74% 25% 7%;
-      background-size: 74%;
-      background-position: top center;
+    text-align: center;
+    padding: 74% 25% 7%;
+    background-size: 74%;
+    background-position: top center;
   }
 
   .main__title {
-      margin-bottom: 44px;
-      font: bold 40px/48px pt_serifbold, arial, helvetica, sans-serif;
-      width: 100%;
-      word-break:keep-all;
+    margin-bottom: 44px;
+    font: bold 40px/48px pt_serifbold, arial, helvetica, sans-serif;
+    width: 100%;
+    word-break:keep-all;
   }
 
   .main__title-text_highlight {
-      line-height: 48px;
+    line-height: 48px;
   }
 
   .main__subtitle {
-      width: 100%;
-      font: 21px/22px robotoregular, arial, helvetica, sans-serif;
+    width: 100%;
+    font: 21px/22px robotoregular, arial, helvetica, sans-serif;
   }
 
   .main__button{
-      font: 500 19px/17px robotomedium, arial, helvetica, sans-serif;
+    font:    500 19px/17px robotomedium, arial, helvetica, sans-serif;
   }
 
   #menu__toggle{
-      opacity: 0;
+    opacity: 0;
   }
 
   .menu__btn{
-      display: flex;
-      align-items: center;
-      position: fixed;
-      top: 27px;
-      right: 24px;
-      width: 26px;
-      height: 29px;
-      cursor: pointer;
-      z-index: 1;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 27px;
+    right: 24px;
+    width: 26px;
+    height: 29px;
+    cursor:    pointer;
+    z-index:    1;
   }
 
   .menu__btn > span,
   .menu__btn > span::before,
   .menu__btn > span::after {
-      display: block;
-      position: absolute;
-      width: 100%;
-      height: 3px;
-      background-color: blue;
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: blue;
   }
 
   .menu__btn > span::before {
-      content: '';
-      top:    -7px;
+    content: '';
+    top:    -7px;
   }
 
   .menu__btn > span::after {
-      content: '';
-      top:    7px;
+    content: '';
+    top:    7px;
   }
 
   .menu__box {
-      display: block;
-      position: fixed;
-      visibility: hidden;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 100%;
-      padding: 80px 0;
-      list-style: none;
-      text-align: center;
-      background-color: #fff;
-      box-shadow: 50px 10px 1px rgba(0, 0, 0, .9);
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    padding: 80px 0;
+    list-style: none;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 50px 10px 1px rgba(0, 0, 0, .9);
   }
 
   .menu__item {
-      display: inline-block;
-      top: 63px;
-      padding: 36px 0 0 10px;
-      color: #000;
-      font: 600 28px/13px 'Roboto', sans-serif;
-      text-decoration: none;
-    }
+    display: inline-block;
+    top: 63px;
+    padding: 36px 0 0 10px;
+    color: #000;
+    font: 600 28px/13px 'Roboto', sans-serif;
+    text-decoration: none;
+  }
 
   .menu__item:hover {
-      background-color: #CFD8DC;
-      padding: 30px 30px 30px 30px;
+    background-color: #cfd8dc;
+    padding: 30px 30px 30px 30px;
   }
 
   #menu__toggle:checked ~ .menu__btn > span {
-      transform: rotate(45deg);
+    transform: rotate(45deg);
   }
 
   #menu__toggle:checked ~ .menu__btn > span::before {
-      top: 0;
-      transform: rotate(0);
+    top: 0;
+    transform:    rotate(0);
   }
 
   #menu__toggle:checked ~ .menu__btn > span::after {
-      top: 0;
-      transform: rotate(90deg);
+    top: 0;
+    transform:    rotate(90deg);
   }
 
   #menu__toggle:checked ~ .menu__box {
-      visibility: visible;
-      left: 0;
+    visibility: visible;
+    left: 0;
    }
 
   .points {
-      display: none;
+    display: none;
    }
+
 }
 
 @media (max-width: 700px) {
 
   .main {
-      padding: 74% 25% 1%;
-   }
+    padding: 74% 25% 1%;
+  }
 
 }
 
 @media (max-width: 442px) {
 
   .main__title {
-      width: 100%;
-      font: bold 38px/48px pt_serifbold, arial, helvetica, sans-serif;
-   }
+    width: 100%;
+    font: bold 38px/48px pt_serifbold, arial, helvetica, sans-serif;
+  }
 
    .points {
-      display: none;
+     display: none;
    }
 
 }
@@ -687,13 +687,13 @@ body {
 @media (max-width: 388px) {
 
   .main {
-      padding: 74% 10% 24%;
+    padding: 74% 10% 24%;
   }
 
   .main__subtitle {
-      width: 200px;
-      margin: 20px 50px 35px;
-      font: 18px/24px robotoregular, arial, helvetica, sans-serif;
+    width: 200px;
+    margin: 20px 50px 35px;
+    font: 18px/24px robotoregular, arial, helvetica, sans-serif;
   }
 
 }
@@ -701,84 +701,84 @@ body {
 @media (max-width: 377px) {
 
   .wrapper{
-      width: 80%;
+    width: 80%;
   }
 
   .logo{
-      font-size: 0;
+    font-size: 0;
   }
 
   .header {
-      margin-bottom: -28px;
+    margin-bottom: -28px;
   }
 
   .logo__circle_color_blue {
-      left: -5px;
-      top: 46px;
+    left: -5px;
+    top: 46px;
   }
 
   .logo__circle_color_dark-blue {
-      left: -15px;
-      top: 38px;
+    left: -15px;
+    top: 38px;
   }
 
   .menu__btn > span,
   .menu__btn > span::before,
   .menu__btn > span::after {
-      background-color: #0056EC;
+    background-color: #0056EC;
   }
 
   .main {
-      text-align: center;
-      padding: 85% 0 0;
-      background-size: 93%;
-      background-position: top center;
+    text-align: center;
+    padding: 85% 0 0;
+    background-size: 93%;
+    background-position: top center;
   }
 
   .main__title {
-      margin: 0 -5px 24px 5px;
-      font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
+    margin: 0 -5px 24px 5px;
+    font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
   }
 
   .main__title-text_highlight {
-      line-height: 5px;
+    line-height: 5px;
   }
 
   .main__title:nth-child(6) {
-      margin: 0 5px 0 0;
+    margin: 0 5px 0 0;
   }
 
   .main__subtitle{
-      font: 16px/18px robotoregular, arial, helvetica, sans-serif;
-      margin: 0 30px 24px 30px;
-      width: 248px
+    font: 16px/18px robotoregular, arial, helvetica, sans-serif;
+    margin:    0 30px 24px 29px;
+    width: 248px;
   }
 
   .main__button{
-      font:    500 14px/17px robotomedium, arial, helvetica, sans-serif;
-      padding:    12px 22px 13px 15px;
+    font:    500 14px/17px robotomedium, arial, helvetica, sans-serif;
+    padding:    12px 22px 13px 15px;
   }
 
   .points{
-      display: none;
+    display: none;
   }
 
 }
 
 @media (max-width: 370px) {
   .main__subtitle {
-      width: 100%;
-      margin: 0 0 15% 1%;
+    width: 100%;
+    margin: 0 0 15% 1%;
   }
 
 }
 
 @media (max-width: 239px) {
   .main__title{
-      font: bold 23px/30px pt_serifbold, arial, helvetica, sans-serif;
+    font: bold 23px/30px pt_serifbold, arial, helvetica, sans-serif;
   }
 
   .main__subtitle{
-      font: 14px/18px robotoregular, arial, helvetica, sans-serif;
+    font: 14px/18px robotoregular, arial, helvetica, sans-serif;
   }
 }
