--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   width: 28px;
   height: 28px;
   border-radius: 50%;
-  opacity:  .7;
+  opacity: 0.7;
 }
 
 .logo__circle_color_dark-blue {
@@ -56,7 +56,7 @@ body {
   color: #000;
   text-decoration: none;
   opacity: 1;
-  transition: opacity  .5s;
+  transition: opacity 0.5s;
   animation-duration: 3s;
   animation-name: slidein;
 }
@@ -68,7 +68,7 @@ body {
   width: 100%;
   height: 2px;
   left: 0;
-  background: #0056EC;
+  background: #0056ec;
   opacity: 0;
 }
 
@@ -81,15 +81,15 @@ body {
   margin-right: -9px;
 }
 
-  @keyframes slidein{
-    from  {
-      margin-left:    100%;
-      width:    300%;
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%;
   }
 
     to  {
-      margin-left:    0%;
-      width:    100%;
+      margin-left: 0%;
+      width: 100%;
   }
 }
 
@@ -126,7 +126,7 @@ body {
 }
 
 .main__button:hover {
-  opacity:  .5;
+  opacity: 0.5;
 }
 
 .points {
@@ -150,7 +150,7 @@ body {
     right: 38%;
   }
 
-  .points  {
+  .points {
     top: 90%;
   }
 }
@@ -199,7 +199,7 @@ body {
     width: 45%;
   }
 
-  .main__title-text_highlight  {
+  .main__title-text_highlight {
     line-height: 75px;
   }
 }
@@ -210,7 +210,7 @@ body {
   }
 
   .menu__item {
-    right:   19%;
+    right: 19%;
   }
 
   .main {
@@ -221,13 +221,13 @@ body {
 
 @media (max-width: 1460px) {
   .main {
-    background-size:    55%;
+    background-size: 55%;
   }
 }
 
 @media (max-width: 1376px) {
 
-  .wrapper  {
+  .wrapper {
     width: 75%;
   }
 
@@ -237,7 +237,7 @@ body {
 
   .main {
     background-size: 55%;
-    background-position:    top right;
+    background-position: top right;
   }
 
   .main__title {
@@ -269,7 +269,7 @@ body {
   }
 
   .header {
-    margin-bottom:    28px;
+    margin-bottom: 28px;
   }
 
   .main {
@@ -306,8 +306,8 @@ body {
   }
 
   .menu {
-    display:    flex;
-    align-items:    center;
+    display: flex;
+    align-items: center;
   }
 
   .menu__item {
@@ -315,10 +315,10 @@ body {
     position: relative;
     margin: 4px 26px 0 0;
     font: 500 14px/18px robotomedium, arial, helvetica, sans-serif;
-    color:    #000;
+    color: #000;
     text-decoration: none;
     opacity: 1;
-    transition:    opacity .5s;
+    transition: opacity .5s;
   }
 
   .menu__item_active::after {
@@ -342,7 +342,7 @@ body {
   }
 
   .points {
-    margin-left:     4%;
+    margin-left: 4%;
     top: 69%;
   }
 }
@@ -354,9 +354,9 @@ body {
 }
 
 @media (max-width: 1280px) {
- .points{
+ .points {
    margin-left: 0%;
-   top:    69%;
+   top: 69%;
  }
 }
 
@@ -365,13 +365,13 @@ body {
     background-position: 100%;
   }
 
-  .main__title{
+  .main__title {
     font: bold 45px/56px pt_serifbold, arial, helvetica, sans-serif;
     word-break: keep-all;
   }
 
   .main__title-text_highlight {
-    line-height:    56px;
+    line-height: 56px;
   }
 
   .points {
@@ -406,10 +406,10 @@ body {
   }
 
   .main__title {
-    margin: 0px;
+    margin: 0;
     padding: 7px 0 10px 0;
     font: bold 50px/59px pt_serifbold, arial, helvetica, sans-serif;
-    width:400px;
+    width: 400px;
     word-break: keep-all;
   }
 
@@ -452,7 +452,7 @@ body {
   }
 
   .points{
-    position:    absolute;
+    position: absolute;
     top: 652px;
     padding-left: 447px;
     color: #c8dbfb;
@@ -471,12 +471,12 @@ body {
    }
 
   .main__title-text_highlight {
-    line-height:    39px;
+    line-height: 39px;
    }
 
-   .main__subtitle  {
+   .main__subtitle {
      font: 18px/20px robotoregular, arial, helvetica, sans-serif;
-     width:    40%;
+     width: 40%;
    }
 
    .points {
@@ -486,7 +486,7 @@ body {
 
 @media (max-width: 892px) {
   .points {
-    padding-left:    43%;
+    padding-left: 43%;
   }
 }
 
@@ -530,8 +530,8 @@ body {
     font: 21px/22px robotoregular, arial, helvetica, sans-serif;
   }
 
-  .main__button{
-    font:    500 19px/17px robotomedium, arial, helvetica, sans-serif;
+  .main__button {
+    font: 500 19px/17px robotomedium, arial, helvetica, sans-serif;
   }
 
   #menu__toggle {
@@ -546,8 +546,8 @@ body {
     right: 24px;
     width: 26px;
     height: 29px;
-    cursor:    pointer;
-    z-index:    1;
+    cursor: pointer;
+    z-index: 1;
   }
 
   .menu__btn > span,
@@ -582,7 +582,7 @@ body {
     list-style: none;
     text-align: center;
     background-color: #fff;
-    box-shadow: 50px 10px 1px rgba(0, 0, 0,  .9);
+    box-shadow: 50px 10px 1px rgba(0, 0, 0, .9);
   }
 
   .menu__item {
@@ -605,12 +605,12 @@ body {
 
   #menu__toggle:checked ~ .menu__btn > span::before {
     top: 0;
-    transform:    rotate(0);
+    transform: rotate(0);
   }
 
   #menu__toggle:checked ~ .menu__btn > span::after {
     top: 0;
-    transform:    rotate(90deg);
+    transform: rotate(90deg);
   }
 
   #menu__toggle:checked ~ .menu__box {
@@ -657,7 +657,7 @@ body {
     width: 80%;
   }
 
-  .logo{
+  .logo {
     font-size: 0;
   }
 
@@ -703,7 +703,7 @@ body {
 
   .main__subtitle {
     font: 16px/18px robotoregular, arial, helvetica, sans-serif;
-    margin:    0 30px 24px 29px;
+    margin: 0 30px 24px 29px;
     width: 248px;
   }
 
